tests/errors/preprocessor/must_be_string_ending.c
char a[] = "dd
void main()
{

}
